--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.0.8",
     "@nestjs/swagger": "^11.0.3",
+    "@nestjs/websockets": "^11.0.8",
     "@prisma/client": "^6.3.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
